# narwhal-bench

./: Cargo.toml  README.md  crates.js  index.html  search-index.js  source-files.js
.github/: pull.yml
benchmark/: fabfile.py
config/: all.html  enum.ComitteeUpdateError.html  enum.ConfigError.html  index.html  struct.Authority.html  struct.BlockSynchronizerParameters.html  struct.Committee.html  struct.ConsensusAPIGrpcParameters.html  struct.Parameters.html  struct.PrimaryAddresses.html  struct.PrometheusMetricsParameters.html  struct.WorkerAddresses.html  trait.Export.html  trait.Import.html  type.Epoch.html  type.SharedCommittee.html  type.Stake.html  type.WorkerId.html
consensus/: all.html  constant.DEFAULT_CHANNEL_SIZE.html  index.html  struct.ConsensusOutput.html  struct.ConsensusSyncRequest.html
crypto/: all.html  constant.DIGEST_LEN.html  fn.blake2b_256.html  fn.generate_keypair.html  fn.generate_production_keypair.html  index.html  struct.Digest.html  struct.SignatureService.html  trait.Hash.html  trait.Signature.html  trait.Verifier.html  type.CryptoError.html
dag/: fn.bfs.html  index.html  struct.Node.html  struct.NodeRef.html  type.WeakNodeRef.html
demo_client/: all.html  fn.println_and_into_inner.html  index.html
engine/: Cargo.toml
executor/: Cargo.toml  constant.DEFAULT_CHANNEL_SIZE.html  enum.SubscriberError.html  index.html  macro.bail.html  macro.ensure.html  sidebar-items.js  struct.ExecutionIndices.html  struct.Executor.html  trait.ExecutionState.html  trait.ExecutionStateError.html  type.ExecutorOutput.html  type.SerializedTransaction.html  type.SerializedTransactionDigest.html  type.SubscriberResult.html
network/: all.html  constant.MAX_TASK_CONCURRENCY.html  index.html  struct.BoundedExecutor.html  (+7 more)
proc/: Cargo.toml  all.html  index.html  sidebar-items.js
proc/account/: index.html  sidebar-items.js  struct.BankAccount.html
proc/bank/: constant.CREATED_ASSET_BALANCE.html  constant.PRIMARY_ASSET_ID.html  index.html  sidebar-items.js  struct.BankController.html
proc/src/: account.rs  bank.rs  lib.rs  master.rs  router.rs  spot.rs  stake.rs
suite/: Cargo.toml
suite/benches/: concurrency.rs  serialization.rs
(+521 files in other folders)
