[workspace]
members = ["config", "consensus", "crypto", "dag", "executor", "examples", "network", "node", "primary", "proc", "test_utils", "types", "worker", "workspace-hack", "gdex-crypto/crypto", "gdex-crypto/crypto-derive"]

[profile.release]
codegen-units = 1
lto = true

[profile.bench-profiling]
inherits = "release"
# Important for performance/memory profiling
debug = true

[profile.bench]
codegen-units = 1
lto = true
