[package]
name = "proc"
version = "0.1.0"
authors = []
edition = "2018"

[dependencies]
assert_approx_eq = "1.1.0"
rand = "0.7.0"
criterion = "0.3.4"
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0"
bcs = "0.1.2"
crypto = { path = "../crypto" }
engine = { path = "../engine" }
workspace-hack = { path = "../workspace-hack" }
types = { path = "../types" }