[package]
name = "suite"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]

[dependencies]
criterion = "0.3"

proc = { path = "../proc" }
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[[bench]]
name = "concurrency"
harness = false
# This doesn't seem to work with criterion, cf. https://github.com/bheisler/criterion.rs/issues/344
# For now, we have to bench by doing `cargo bench --features="batch"`.
# required-features = ["batch"]