[package]
name = "suite"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]

[dependencies]
criterion = { version = "0.3.5", features = ["async_tokio"] }
rand = "0.7.3"
tokio = { version = "1.20.1", features = ["sync"] }

crypto = { path = "../crypto" }
proc = { path = "../proc" }
types = { path = "../types" }
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[[bench]]
name = "concurrency"
harness = false
# This doesn't seem to work with criterion, cf. https://github.com/bheisler/criterion.rs/issues/344
# For now, we have to bench by doing `cargo bench --features="batch"`.
# required-features = ["batch"]
